--- a/package.json
+++ b/package.json
@@ -2,20 +2,49 @@
   "name": "electron-sqllite3",
   "version": "0.1.0",
   "private": true,
+  "author": "hijsam",
+  "main": "public/electron.js",
+  "homepage": "./",
+  "build": {
+    "productName": "electron-test-app",
+    "asar": true,
+    "appId": "org.hijsam.electron-test-app",
+    "files": [
+      "dist",
+      "db/*",
+      "package.json"
+    ],
+    "extraResources": [
+      "./extraResources/**"
+    ]
+  },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.0",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "electron-is-dev": "^2.0.0",
+    "electron-store": "^8.1.0",
+    "framer-motion": "^10.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "^5.0.1",
+    "sql.js": "^1.8.0",
+    "web-vitals": "^2.1.4",
+    "xml2json-light": "^1.0.6"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test",
+    "react-eject": "react-scripts eject",
+    "start": "concurrently \"cross-env NODE_ENV=development BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\"",
+    "build": "npm run react-build && electron-builder",
+    "release": "npm run react-build && electron-builder --publish=always"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +63,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "concurrently": "^8.2.1",
+    "cross-env": "^7.0.3",
+    "electron": "^26.1.0",
+    "electron-builder": "^24.6.3",
+    "wait-on": "^7.0.1"
   }
 }
